# re-moct

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LatencyProbe.cpp  README.md  THIRD-PARTY-NOTICES.md  joan-osborne-relish-ripid.txt
.github/workflows/: ci.yml
binary-dev/: about.txt
docs/: AccurateRipPipe.md  CLAUDE.md  PRIVACY.md  README.md  TERMS.md  THIRD_PARTY-NOTICES.md  aac-m4a-encoder-plan.md  aac-m4a-phase0-report.md  abi-cluster-design.md  abi-cluster-slice-b-plan.md  ar-pipeline.md  architecture.md  art-embed-shared-plan.md  batch-r128-plan.md  convert-core-plan.md  decode-ogg-vorbis-plan.md  decode-opus-wv-plan.md  encoder-bitrate-mode-plan.md  iheart-deeplog-guarddiag-plan.md  iheartlessons.md  index.html  lessons.md  log-semantics-plan.md  mp3-rg-read-plan.md  mp3-rg-write-plan.md  osmedia-seam-plan.md  phase3-readiness.md  phase3-slice2-design.md  phase3-slice3-design.md  phase3-slice4-design.md  phase3-slice5-design.md  phase3-slice6-design.md  phase4-readiness.md  phase4-slice-b-design.md  phase4-slice-c-design.md  podcast-chapters-json-plan.md  re-moct-v100rc1.html  rec-art-pending-race-fix-plan.md  rec-cover-art-plan.md  repin-refine-plan.md  (+23 more)
docs/IHeartRadio/: DEBRIEF.md  IHeartRadio.cpp  IHeartRadio.h
docs/IHeartRadio/http_dump/: heartdump.ps1  howto.txt
docs/samples/: accuraterip-id.txt
docs/screenshots/: README.md
include/: AacDecoder.h  ArtEmbed.h  ArtMissCache.h  AudioManager.h  AwesomeThemes.h  Base64.h  CDRipper.h  CDSource.h  Config.h  ConvertJob.h  CoverArt.h  CoverArtRender.h  CursesSeam.h  CustomBackends.h  DiscordRP.h  EncoderFactory.h  EncoderQuality.h  FlacEncoder.h  FrameSync.h  GainScan.h  IEncoder.h  IHeartDeepLog.h  IHeartRadio.h  IHttp.h  LastFm.h  ListenBrainz.h  LocalFileSource.h  Log.h  LrcData.h  M4aEncoder.h  MBLookup.h  MarkSet.h  MediaRouter.h  Mp3Encoder.h  Mp4Chapters.h  Mp4Mux.h  MuxWriter.h  NextArm.h  NoopMediaControl.h  OpusDecoder.h  (+29 more)
include/core/: ICdIo.h  IHttp.h  IIpc.h  IMediaControl.h  INotify.h  IPluginLoader.h  ISource.h  remoct_plugin.h
lib/: miniaudio.h  stb_image.VENDOR.md
lib/pdcursesmod/: VENDOR.md
lib/pdcursesmod/wingui/: pdcscrn.c
logs/multi-disc/: accuraterip-id.txt
plugins/stream/: CMakeLists.txt  HlsPrime.h  HostServiceHttp.cpp  HostServiceHttp.h  IHeartDeepLog.cpp  IHeartDeepLog.h  IHeartIdentity.cpp  IHeartIdentity.h  IHeartNowPlayingSM.cpp  IHeartNowPlayingSM.h  IHeartRadio.cpp  IHeartRadio.h  StreamPluginAdapter.cpp  StreamPluginAdapter.h  StreamSource.cpp  StreamSource.h  miniaudio_impl.cpp
probes/aac-m4a/: Mp4Mux.h  README.md  aac_m4a_probe.cpp  build.sh  ma_impl.cpp  rgcheck.cpp
src/: AacDecoder.cpp  ArtEmbed.cpp  AudioManager.cpp  CDRipper.cpp  CDRipper.h  CDSource.cpp  Config.cpp  ConvertJob.cpp  CoverArt.cpp  CoverArtRender.cpp  CustomBackends.cpp  DiscordRP.cpp  EncoderFactory.cpp  FlacEncoder.cpp  GainScan.cpp  HttpWinInet.cpp  IHeartDeepLog.cpp  IHeartNowPlayingSM.cpp  IHeartRadio.cpp  LastFm.cpp  ListenBrainz.cpp  LocalFileSource.cpp  Log.cpp  LrcData.cpp  M4aEncoder.cpp  MBLookup.cpp  Mp3Encoder.cpp  Mp4Chapters.cpp  MuxWriter.cpp  OpusDecoder.cpp  OpusRipEncoder.cpp  PlaylistManager.cpp  PluginHost.cpp  PluginHostServices.cpp  PluginSource.cpp  PodcastClient.cpp  PodcastIndex.cpp  RadioBrowser.cpp  StreamPluginAdapter.cpp  StreamRecorder.cpp  (+9 more)
src/platform/linux/: CdIoSgIo.cpp  CdbSgIo.h  HttpCurl.cpp  IpcUnixSocket.cpp  MediaControlMpris.cpp  NotifyArgv.h  NotifyNotifySend.cpp  PluginLoaderPosix.cpp  SeamStubs.cpp  SecretStorePosix.cpp
src/platform/win/: CdIoWin.cpp  HttpWinInet.cpp  IpcWinPipe.cpp  MediaControlSmtc.cpp  NotifyWinToast.cpp  PluginLoaderWin.cpp  SecretStoreWin.cpp
tests/: CMakeLists.txt  ar_crc_test.cpp  art_embed_test.cpp  art_miss_cache_test.cpp  cd_pipeline_test.cpp  cd_toc_test.cpp  cdb_sgio_test.cpp  convert_core_test.cpp  copy_mux_test.cpp  discord_ipc_test.cpp  encoder_quality_test.cpp  gain_scan_test.cpp  group_c_request_test.cpp  hls_fixture.h  hls_pipeline_test.cpp  hls_prime_test.cpp  http_cancel_test.cpp  http_seam_test.cpp  icy_pipeline_test.cpp  iheart_request_test.cpp  iheart_sm_test.cpp  ipc_echo_test.cpp  m4a_encoder_test.cpp  md5_test.cpp  media_control_test.cpp  mp3_rg_read_test.cpp  next_resolver_test.cpp  notify_argv_test.cpp  notify_toast_test.cpp  opus_mode_test.cpp  plugin_hls_parity_test.cpp  plugin_http_shim_test.cpp  plugin_loader_test.cpp  plugin_sine.c  plugin_stream_test.cpp  podcast_chapters_test.cpp  podcast_client_test.cpp  podcast_parse_test.cpp  podcast_state_test.cpp  podcastindex_parse_test.cpp  (+6 more)
tests/fixtures/podcastindex/: byterm.json
tests/fixtures/podcasts/: adam-and-dr-drew-show.art19.xml  adam-carolla-show.art19.xml  wtf-with-marc-maron.acast.xml
tools/: README.md
tools/osmedia/: FINDINGS.md  build-smtc.sh  drive-mpris.sh  mpris_probe.c  smtc_probe.cpp
tools/src/: SniffIHeartRadio.cpp  StreamHandshakeProbe.cpp  anomaly_state_cross.py  cd_idle_probe.cpp  false_live_cross.py  gate_replay.cpp  iheart_http_dump.cpp  lb_probe.cpp  music_live_cross.py  nowplaying_wide_probe.cpp  np_ledger.py  radio_probe.cpp  segment_anomaly.py
